Add Calvaris & Youenn talk

--- a/index.html
+++ b/index.html
@@ -218,6 +218,20 @@
                         <p class="text-muted">by Dominik Röttsches <a href="http://twitter.com/abrax5"><i class="fa fa-twitter"></i></a></p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalCalvarisYouenn" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/streams-api-and-you-by-xabier-rodriguez-calvar-and-youenn-fablet.jpg" class="img-responsive" alt="Calvaris &amp; Youenn talking about Streams API">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalCalvarisYouenn" class="portfolio-link" data-toggle="modal">Streams API and you</a></h4>
+                        <p class="text-muted">by Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris"><i class="fa fa-twitter"></i></a><br>&amp; Youenn Fablet</p>
+                    </div>
+                </div>
 			</div>
         </div>
     </section>
@@ -566,6 +580,37 @@
                             <ul class="list-inline">
                                 <li>Date: Tuesday 8th December 2015</li>
                                 <li>Time: 15:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CalvarisYouenn talk -->
+    <div class="portfolio-modal modal fade" id="talkModalCalvarisYouenn" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>Streams API and you</h2>
+							<p class="item-intro text-muted">by Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris"><i class="fa fa-twitter"></i></a><br>&amp; Youenn Fablet</p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/O94an4pZfb4?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
+                            <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/O94an4pZfb4?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/streams-api-and-you-by-xabier-rodriguez-calvar-and-youenn-fablet.pdf">PDF</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Wednesday 9th December 2015</li>
+                                <li>Time: 10:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
                         </div>
