Add Fred's video

--- a/index.html
+++ b/index.html
@@ -232,6 +232,20 @@
                         <p class="text-muted">by Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris"><i class="fa fa-twitter"></i></a><br>&amp; Youenn Fablet</p>
                     </div>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#talkModalFred" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/talks/mathml-in-web-engines-by-frederic-wang.jpg" class="img-responsive" alt="Frédéric talking about MathML">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4><a href="#talkModalFred" class="portfolio-link" data-toggle="modal">MathML in Web Engines</a></h4>
+                        <p class="text-muted">by Frédéric Wang</p>
+                    </div>
+                </div>
 			</div>
         </div>
     </section>
@@ -611,6 +625,37 @@
                             <ul class="list-inline">
                                 <li>Date: Wednesday 9th December 2015</li>
                                 <li>Time: 10:00</li>
+                            </ul>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fred talk -->
+    <div class="portfolio-modal modal fade" id="talkModalFred" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+							<h2>MathML in Web Engines</h2>
+							<p class="item-intro text-muted">by Frédéric Wang</p>
+                            <iframe width="640" height="360" src="https://www.youtube.com/embed/1KfmYqKN9Tg?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW" frameborder="0" allowfullscreen></iframe>
+                            <ul class="list-inline">
+                                <li>Video: <a href="https://youtu.be/1KfmYqKN9Tg?list=PL4sEzdAGvRgAMfxwUK2sAQcq5EdmDV3eW">YouTube</a></li>
+                                <li>Slides: <a href="http://www.webengineshackfest.org/slides/mathml-in-web-engines-by-frederic-wang/mathml/">HTML</a></li>
+                            </ul>
+                            <ul class="list-inline">
+                                <li>Date: Wednesday 9th December 2015</li>
+                                <li>Time: 15:00</li>
                             </ul>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Talk</button>
                         </div>
