Update list of topics from past year

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">The event has an <strong>unconference format</strong> and the first step is the creation of small focused teams. Attendees should feel free to propose any topic which interests them.</p>
-                                    <p class="text-muted">Past year topics of interest included: WebKit ports, performance, graphics architecture, CSS (Grid Layout, Multi-column, Regions, etc.), multimedia, WebRTC, MathML, ES6 features (V8, JSC and SpiderMonkey), a11y, and Wayland support.</p>
+                                    <p class="text-muted">Past year topics of interest included: WebKit Ports (WebKitGTK+, WebKitEFL and WebKit for Wayland), Multimedia, Media Source, Streams API, Layout, MathML, Graphics, Fonts, Servo, Epiphany.</p>
                                 </div>
                             </div>
                         </li>
