Publish list of confirmed attendees

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">This is a <strong>hacking oriented</strong> invitation-only event. If you want to attend you can <a href="mailto:hackfest@webengineshackfest.org">request an invitation</a>.</p>
                                     <p class="text-muted">The event involves members from all parts of the Web Platform community, including those who work on Blink, WebKit, Gecko, and Servo.</p>
+                                    <p class="text-muted">Check the list of <a href="#attendees">confirmed attendees</a> for more details.</p>
                                 </div>
                             </div>
                         </li>
@@ -248,6 +249,59 @@
                 </div>
 			</div>
         </div>
+    </section>
+
+    <!-- Attendees Section -->
+    <section id="attendees">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Attendees</h2>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Collabora</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Mozilla</strong> and <strong>Red Hat</strong>.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <ul>
+                    <div class="col-sm-4">
+                        <li>Alberto García <a href="http://twitter.com/bertogg" title="@bertogg"><i class="fa fa-twitter"></i></a></li>
+                        <li>Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
+                        <li>Anthony Ramine <a href="http://twitter.com/nokusu" title="@nokusu"><i class="fa fa-twitter"></i></a></li>
+                        <li>Antonio Gomes<a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
+                        <li>Arnaud Bonatti</li>
+                        <li>Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></li>
+                        <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
+                        <li>Carlos García Campos</li>
+                        <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                    <div class="col-sm-4">
+                        <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
+                        <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
+                        <li>Frédéric Wang</li>
+                        <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
+                        <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
+                        <li>Jack Moffit <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></li>
+                        <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
+                        <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
+                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                    <div class="col-sm-4">
+                        <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
+                        <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
+                        <li>Michael Catanzaro</li>
+                        <li>Philippe Normand <a href="http://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
+                        <li>Sergio Villar Senín <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Simon Sapin <a href="http://twitter.com/SimonSapin" title="@SimonSapin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Tomas Popela</li>
+                        <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
+                        <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
+                    </div>
+                </ul>
+            </div>
+            <div class="row" style="margin-top: 2em;">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <p class="large text-muted">We still have room for more people! If you want to attend <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</p>
+                </div>
+            </div>
     </section>
 
     <!-- Venue Section -->
