--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <li>Frédéric Wang</li>
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
-                        <li>Jack Moffit <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></li>
+                        <li>Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></li>
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
