Remove page-scroll effect
Requested by https://twitter.com/nokusu/status/738339331270676482

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Web Engines Hackfest</a>
+                <a class="navbar-brand" href="#page-top">Web Engines Hackfest</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -57,19 +57,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#hackfest">Hackfest</a>
+                        <a href="#hackfest">Hackfest</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#venue">Venue</a>
+                        <a href="#venue">Venue</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                        <a href="#sponsors">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#coc">CoC</a>
+                        <a href="#coc">CoC</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
