--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organzations working on the Web Platform: <strong>Collabora</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Mozilla</strong> and <strong>Red Hat</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organizations working on the Web Platform: <strong>Collabora</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Mozilla</strong> and <strong>Red Hat</strong>.</h3>
                 </div>
             </div>
             <div class="row">
