Add Andre and Danilo to the list of attendees

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
                     <div class="col-sm-4">
                         <li>Alberto García <a href="http://twitter.com/bertogg" title="@bertogg"><i class="fa fa-twitter"></i></a></li>
                         <li>Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
+                        <li>Andre Moreira Magalhaes</a>
                         <li>Anthony Ramine <a href="http://twitter.com/nokusu" title="@nokusu"><i class="fa fa-twitter"></i></a></li>
                         <li>Antonio Gomes<a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
                         <li>Arnaud Bonatti</li>
@@ -274,6 +275,7 @@
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Danilo Cesar Lemes de Paula</li>
                         <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
