--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
                         <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
+                        <li>Danilo Cesar Lemes de Paula</li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Danilo Cesar Lemes de Paula</li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
@@ -285,15 +285,16 @@
                         <li>Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></li>
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
+                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
                         <li>Michael Catanzaro</li>
                         <li>Philippe Normand <a href="http://twitter.com/pnormand" title="@pnormand"><i class="fa fa-twitter"></i></a></li>
                         <li>Sergio Villar Senín <a href="http://twitter.com/svillarsenin" title="@svillarsenin"><i class="fa fa-twitter"></i></a></li>
                         <li>Simon Sapin <a href="http://twitter.com/SimonSapin" title="@SimonSapin"><i class="fa fa-twitter"></i></a></li>
+                        <li>Shing Lyu</li>
                         <li>Tomas Popela</li>
                         <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
                         <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
