--- a/index.html
+++ b/index.html
@@ -270,12 +270,13 @@
                         <li>Antonio Gomes<a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
                         <li>Arnaud Bonatti</li>
                         <li>Behdad Esfahbod <a href="http://twitter.com/behdadesfahbod" title="@behdadesfahbod"><i class="fa fa-twitter"></i></a></li>
+                        <li>Caitlin Potter <a href="http://twitter.com/caitp88" title="@caitp88"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
-                        <li>Danilo Cesar Lemes de Paula</li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Danilo Cesar Lemes de Paula</li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
