--- a/index.html
+++ b/index.html
@@ -288,9 +288,10 @@
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>Josh Wolfe</li>
+                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
+                        <li>Manish Goregaokar <a href="http://twitter.com/ManishEarth" title="@ManishEarth"><i class="fa fa-twitter"></i></a></li>
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
                         <li>Michael Catanzaro</li>
