--- a/index.html
+++ b/index.html
@@ -284,13 +284,14 @@
                         <li>Frédéric Wang</li>
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
+                        <li>Henrique Ferreiro <a href="http://twitter.com/hferreiro" title="@hferreiro"><i class="fa fa-twitter"></i></a></li>
                         <li>Jack Moffitt <a href="http://twitter.com/metajack" title="@metajack"><i class="fa fa-twitter"></i></a></li>
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>Josh Wolfe</li>
-                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                         <li>Manish Goregaokar <a href="http://twitter.com/ManishEarth" title="@ManishEarth"><i class="fa fa-twitter"></i></a></li>
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
