--- a/index.html
+++ b/index.html
@@ -275,13 +275,14 @@
                         <li>Carlos García Campos</li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                         <li>Danilo Cesar Lemes de Paula</li>
+                        <li>Diane Hosfelt <a href0"https://twitter.com/avadacatavra" title="@avadacatavra"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Diane Hosfelt <a href0"https://twitter.com/avadacatavra" title="@avadacatavra"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
                         <li>Frédéric Wang</li>
+                        <li>Guillaume Emont <a href="http://twitter.com/guijemont" title="@guijemont"><i class="fa fa-twitter"></i></a></li>
                         <li>Gustavo Noronha <a href="http://twitter.com/gustavokov" title="@gustavokov"><i class="fa fa-twitter"></i></a></li>
                         <li>Gwang Yoon Hwang <a href="http://twitter.com/ryumiel" title="@ryumiel"><i class="fa fa-twitter"></i></a></li>
                         <li>Henrique Ferreiro <a href="http://twitter.com/hferreiro" title="@hferreiro"><i class="fa fa-twitter"></i></a></li>
