--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>Josh Wolfe</li>
+                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
-                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                         <li>Manish Goregaokar <a href="http://twitter.com/ManishEarth" title="@ManishEarth"><i class="fa fa-twitter"></i></a></li>
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
@@ -302,6 +302,7 @@
                         <li>Simon Sapin <a href="http://twitter.com/SimonSapin" title="@SimonSapin"><i class="fa fa-twitter"></i></a></li>
                         <li>Shing Lyu</li>
                         <li>Tomas Popela</li>
+                        <li>Trevor Saunders <a href="http://twitter.com/tbsaunde" title="@tbsaunde"><i class="fa fa-twitter"></i></a></li>
                         <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
                         <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
                     </div>
