--- a/index.html
+++ b/index.html
@@ -274,10 +274,11 @@
                         <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
+                        <li>Christian Biesinger</li>
                         <li>Danilo Cesar Lemes de Paula</li>
-                        <li>Diane Hosfelt <a href0"https://twitter.com/avadacatavra" title="@avadacatavra"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Diane Hosfelt <a href0"https://twitter.com/avadacatavra" title="@avadacatavra"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
@@ -290,9 +291,9 @@
                         <li>Javier Fernández <a href="http://twitter.com/lajava77" title="@lajava77"><i class="fa fa-twitter"></i></a></li>
                         <li>Joanmarie Diggs <a href="http://twitter.com/Joanmarie" title="@Joanmarie"><i class="fa fa-twitter"></i></a></li>
                         <li>Josh Wolfe</li>
-                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Khaled Hosny <a href="http://twitter.com/KhaledGhetas" title="@KhaledGhetas"><i class="fa fa-twitter"></i></a></li>
                         <li>Manish Goregaokar <a href="http://twitter.com/ManishEarth" title="@ManishEarth"><i class="fa fa-twitter"></i></a></li>
                         <li>Manuel Rego <a href="http://twitter.com/regocas" title="@regocas"><i class="fa fa-twitter"></i></a></li>
                         <li>Martin Robinson <a href="http://twitter.com/abandonedwig" title="@abandonedwig"><i class="fa fa-twitter"></i></a></li>
