Add Christian's twitter

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <li>Carlos A. López Pérez <a href="http://twitter.com/cl0p3z" title="@cl0p3z"><i class="fa fa-twitter"></i></a></li>
                         <li>Carlos García Campos</li>
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
-                        <li>Christian Biesinger</li>
+                        <li>Christian Biesinger<a href="http://twitter.com/cbiesinger" title="@cbiesinger"><i class="fa fa-twitter"></i></a></li>
                         <li>Danilo Cesar Lemes de Paula</li>
                     </div>
                     <div class="col-sm-4">
