--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Attendees</h2>
-                    <h3 class="section-subheading text-muted">This year we have people from several companies and organizations working on the Web Platform: <strong>Collabora</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Mozilla</strong> and <strong>Red Hat</strong>.</h3>
+                    <h3 class="section-subheading text-muted">This year we have people from several companies and organizations working on the Web Platform: <strong>Apple</strong>, <strong>Collabora</strong>, <strong>Google</strong>, <strong>Igalia</strong>, <strong>Huawei</strong>, <strong>Mozilla</strong> and <strong>Red Hat</strong>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -265,6 +265,7 @@
                     <div class="col-sm-4">
                         <li>Alejandro G. Castro <a href="http://twitter.com/alexgcastro" title="@alexgcastro"><i class="fa fa-twitter"></i></a></li>
                         <li>Andre Moreira Magalhaes</a>
+                        <li>Andrey Fedorov</li>
                         <li>Anthony Ramine <a href="http://twitter.com/nokusu" title="@nokusu"><i class="fa fa-twitter"></i></a></li>
                         <li>Antonio Gomes<a href="http://twitter.com/tonikitoo" title="@tonikitoo"><i class="fa fa-twitter"></i></a></li>
                         <li>Arnaud Bonatti</li>
@@ -275,9 +276,9 @@
                         <li>Claudio Saavedra <a href="http://twitter.com/csaavedra" title="@csaavedra"><i class="fa fa-twitter"></i></a></li>
                         <li>Christian Biesinger<a href="http://twitter.com/cbiesinger" title="@cbiesinger"><i class="fa fa-twitter"></i></a></li>
                         <li>Danilo Cesar Lemes de Paula</li>
-                        <li>Diane Hosfelt <a href0"https://twitter.com/avadacatavra" title="@avadacatavra"><i class="fa fa-twitter"></i></a></li>
                     </div>
                     <div class="col-sm-4">
+                        <li>Diane Hosfelt <a href0"https://twitter.com/avadacatavra" title="@avadacatavra"><i class="fa fa-twitter"></i></a></li>
                         <li>Emanuele Aina <a href="https://twitter.com/emanueleaina" title="@emanueleaina"><i class="fa fa-twitter"></i></a></li>
                         <li>Emilio Cobos <a href="http://twitter.com/ecbos_" title="@ecbos_"><i class="fa fa-twitter"></i></a></li>
                         <li>Enrique Ocaña González <a href="http://twitter.com/eocanha" title="@eocanha"><i class="fa fa-twitter"></i></a></li>
@@ -303,6 +304,7 @@
                         <li>Tomas Popela</li>
                         <li>Trevor Saunders <a href="http://twitter.com/tbsaunde" title="@tbsaunde"><i class="fa fa-twitter"></i></a></li>
                         <li>Xabier Rodríguez Calvar <a href="http://twitter.com/calvaris" title="@calvaris"><i class="fa fa-twitter"></i></a></li>
+                        <li>Youenn Fablet</li>
                         <li>Žan Dobersek <a href="http://twitter.com/falconsigh" title="@falconsigh"><i class="fa fa-twitter"></i></a></li>
                     </div>
                 </ul>
