Add Mozilla as silver sponsor

--- a/index.html
+++ b/index.html
@@ -396,15 +396,29 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Sponsors</h2>
-                    <h3 class="section-subheading text-muted">More sponsors are welcome! If you'd like to contribute as sponsor, please <a href="mailto:hackfest@webengineshackfest.org">contact us</a>.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3 class="text-muted">Gold Sponsors</h3>
                 </div>
             </div>
             <div class="row text-center sponsors">
                 <a href="https://www.collabora.com">
                     <img src="img/logos/logo-collabora.png" title="Collabora" alt="Collabora Logo">
                 </a>
-                <a href="http://www.igalia.com">
+                <a href="https://www.igalia.com">
                     <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
+                </a>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h4 class="text-muted">Silver Sponsors</h4>
+                </div>
+            </div>
+            <div class="row text-center sponsors">
+                <a href="https://www.mozilla.org">
+                    <img src="img/logos/logo-mozilla.png" title="Mozilla" alt="Mozilla Logo">
                 </a>
             </div>
         </div>
