--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                     <h4 class="subheading">2016 Edition</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Visit the <a href="https://github.com/Igalia/webengineshackfest/wiki">hackfest wiki page</a> with scheduling, breakout sessions and all the information related to the past year event.</p>
+                                    <p class="text-muted">Visit the <a href="https://github.com/Igalia/webengineshackfest/wiki">hackfest wiki page</a> with scheduling, breakout sessions and all the information related to the event.</p>
                                 </div>
                             </div>
                         </li>
