Add organizer info

--- a/index.html
+++ b/index.html
@@ -394,6 +394,16 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
+                    <h3 class="text-muted">Host &amp; Organizer</h3>
+                </div>
+            </div>
+            <div class="row text-center sponsors">
+                <a href="https://www.igalia.com">
+                    <img src="img/logos/logo-igalia.png" title="Igalia" alt="Igalia Logo">
+                </a>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
                     <h3 class="text-muted">Gold Sponsors</h3>
                 </div>
             </div>
